fixed overflow-x

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -46,7 +46,7 @@ b, i,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, summary,
 time, mark, audio, video {
    margin: 0;
@@ -64,7 +64,6 @@ footer,header,hgroup,menu,nav,section {
 }
 
 audio,
-canvas,
 video {
    display: inline-block;
 }
